<resources>
    <string name="app_name">Erasmus+</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="error_login">ERROR : El usuario o la contraseña no son correctos</string>
    <string name="error_without_file_manager">Por favor instale un gestor de archivos</string>
    <string name="txt_user_data">Su información</string>
    <string name="btn_upload_file">Subir Documento</string>
    <string name="txt_documents_list">Sus documentos</string>
    <string name="user_name">Nombre</string>
    <string name="txt_user_dni">Identificación (DNI/NIF)</string>
    <string name="user_last_name">Apellidos</string>
    <string name="loading_session">Obteniendo datos…</string>
    <string name="txt_switch_document">Ir a Documentos</string>
    <string name="txt_switch_account">Perfil</string>
    <string name="upload_completed">Subida Completada</string>
    <string name="error_upload">Error en la subida</string>
    <string name="uploading_file">Subiendo documento</string>
    <string name="txt_refresh">Documentos actualizados</string>
    <string name="txt_update_document">Subida completada</string>
    <string name="txt_edit_user">Guardar</string>
    <string name="spinner_fp">Ciclo</string>
    <string name="not_selected">No seleccionado</string>
    <string name="txt_user_cycle">FP</string>
    <string name="txt_birth_date">Fecha de nacimiento</string>
    <string name="txt_user_nationality">Nacionalidad</string>
    <string name="txt_user_phone">Teléfono</string>
    <string name="txt_user_locality">Localidad</string>
    <string name="txt_user_address">Dirección</string>
    <string name="txt_user_zip_code">Código Postal</string>
    <string name="txt_show_document">Abrir</string>
    <string name="txt_delete_document">Eliminar</string>
    <string name="txt_about_app">Acerca de la APP</string>
    <string name="txt_app_description">Con la aplicación de Erasmus hecha con ❤️ por el IES Ingeniero de la Cierva puedes administrar todos tus documentos y datos personales sin entrar en la web.
    </string>
    <string name="label_about">Sobre la APP</string>
    <string name="message_open_pdf">Descargando…</string>
    <string name="txt_user_data_edit">Editar perfil</string>
    <string name="txt_document_deleted">Documento eliminado</string>
    <string name="erasmus_logo_description">Imagen de Erasmus</string>
    <string name="txt_modified_data">Actualización completada</string>
    <string name="txt_error_modifying_data">Error al modificar los datos</string>
    <string name="channel_name">erasmus_notifications</string>
    <string name="channel_description">Erasmus notifications</string>
    <string name="txt_home">Menu principal</string>
    <string name="txt_edit_user_cancel">Cancelar</string>
    <string name="txt_file_manager_warning">Es necesarion que seleccione y use un gestor de archivos</string>
</resources>