<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            tools:context=".View.EditActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_name"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="25sp"
                    android:textColor="#171717" android:labelFor="@id/edit_user_name"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_user_name"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="19sp"
                    android:layout_marginBottom="31dp"
                    android:minHeight="48dp" android:importantForAutofill="no"/>
            <TextView
                    android:text="@string/hint_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_user_email"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="25sp"
                    android:textColor="#191919"
                    android:labelFor="@id/edit_user_email"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_user_email"
                    android:fontFamily="@font/ubuntu"
                    android:inputType="textEmailAddress"
                    android:textSize="19sp"
                    android:layout_marginBottom="31dp"
                    android:minHeight="48dp"/>
            <TextView
                    android:text="@string/user_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_user_last_name"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="25sp"
                    android:textColor="#191919"
                    android:labelFor="@id/edit_user_last_name"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_user_last_name"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="19sp"
                    android:layout_marginBottom="31dp"
                    android:minHeight="48dp"/>
            <TextView
                    android:text="@string/txt_user_dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_user_dni"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="25sp"
                    android:textColor="#191919"
                    android:labelFor="@id/edit_user_dni"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_user_dni"
                    android:fontFamily="@font/ubuntu"
                    android:layout_marginBottom="31dp"
                    android:textSize="19sp"
                    android:minHeight="48dp"/>
            <TextView
                    android:text="@string/spinner_fp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_fp"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="25sp"
                    android:textColor="#171717" android:labelFor="@id/spinner_fp"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_fp"
                    android:minHeight="48dp"
                    android:spinnerMode="dropdown"/>
            <TextView
                    android:text="@string/txt_user_nationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_user_nationality"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="25sp"
                    android:textColor="#191919" android:labelFor="@id/edit_user_nationality"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_user_nationality"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="19sp"
                    android:layout_marginBottom="31dp"/>
            <TextView
                    android:text="@string/txt_user_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_user_phone"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="25sp"
                    android:textColor="#191919" android:labelFor="@id/edit_user_phone"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_user_phone"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="19sp"
                    android:inputType="phone"
                    android:layout_marginBottom="31dp"/>
            <TextView
                    android:text="@string/txt_user_zip_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_user_zip_code"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="25sp"
                    android:textColor="#191919"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_user_zip_code"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="19sp"
                    android:inputType="textPostalAddress"
                    android:layout_marginBottom="31dp"/>
            <TextView
                    android:text="@string/txt_user_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_user_address"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="25sp"
                    android:textColor="#191919"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_user_address"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="19sp"
                    android:layout_marginBottom="31dp"/>
            <TextView
                    android:text="@string/txt_user_locality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_user_locality"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="25sp"
                    android:textColor="#191919"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_user_locality"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="19sp"
                    android:layout_marginBottom="31dp"/>
            <TextView
                    android:text="@string/txt_birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_birth_date"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="25sp"
                    android:textColor="#191919"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_user_birth_date"
                    android:fontFamily="@font/ubuntu"
                    android:inputType="date"
                    android:textSize="19sp"/>
        </LinearLayout>
</ScrollView>