<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.LoginActivity">
        <ImageView
                android:src="@drawable/erasmuslogo"
                android:layout_width="333dp"
                android:layout_height="82dp"
                android:id="@+id/imageView"
                android:contentDescription="Erasmus Logo"
                android:layout_gravity="center"
                android:layout_marginBottom="55dp"
                android:layout_marginTop="33dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/enterEmail"
                android:importantForAutofill="no"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textSize="23sp"
                android:fontFamily="@font/ubuntu"
                android:gravity="center"
                android:layout_gravity="center"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/enterPassword"
                android:hint="@string/hint_password"
                android:textSize="23sp"
                android:fontFamily="@font/ubuntu"
                android:gravity="center"
                android:layout_gravity="center"
                android:autofillHints=""/>
        <Button
                android:text="@string/btn_login"
                android:background="@drawable/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnLogin"
                android:textSize="31sp"
                android:fontFamily="@font/ubuntu"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="55dp"
                android:padding="9dp"
                android:textColor="#FFFFFF"
                android:shadowColor="#2E2E2E"
                android:shadowRadius="7"/>
        <ProgressBar
                android:id="@+id/indeterminateBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        <TextView
                android:layout_width="383dp"
                android:layout_height="43dp"
                android:id="@+id/txtMessage"
                android:fontFamily="@font/ubuntu"
                android:textSize="15sp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/loading_session"/>
</LinearLayout>