<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".View.UserFragment">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
        <TextView
                android:text="@string/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_name"
                android:fontFamily="@font/ubuntu"
                android:textSize="25sp"
                android:textColor="#171717"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_name"
                android:fontFamily="@font/ubuntu"
                android:textSize="19sp"
                android:layout_marginBottom="31dp"
        />
        <TextView
                android:text="@string/hint_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_user_email"
                android:fontFamily="@font/ubuntu"
                android:textSize="25sp"
                android:textColor="#191919"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_email"
                android:fontFamily="@font/ubuntu"
                android:textSize="19sp"
                android:layout_marginBottom="31dp"
        />
        <TextView
                android:text="@string/user_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_user_last_name"
                android:fontFamily="@font/ubuntu"
                android:textSize="25sp"
                android:textColor="#191919"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_last_name"
                android:fontFamily="@font/ubuntu"
                android:textSize="19sp"
                android:layout_marginBottom="31dp"
        />
        <TextView
                android:text="@string/txt_user_dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_user_dni"
                android:fontFamily="@font/ubuntu"
                android:textSize="25sp"
                android:textColor="#191919"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_dni"
                android:fontFamily="@font/ubuntu"
                android:textSize="19sp"
        />
    </LinearLayout>

</FrameLayout>